# eduverse

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  Dockerfile.frontend  LICENSE  README.md  package-lock.json
.github/workflows/: build_and_publish_frontend.yml
anchor-wasm/src/: lib.rs
eduverse-anchor/anchor-wasm/: Cargo.toml
eduverse-anchor/anchor-wasm/src/: lib.rs
eduverse-anchor/programs/eduverse-contract/: Cargo.toml
eduverse-anchor/programs/eduverse-contract/src/: lib.rs
eduverse-anchor/programs/eduverse-contract/src/instructions/: create_review_teacher.rs  create_student.rs  create_teacher.rs  lesson_approve.rs  lesson_begin.rs  (+3 more)
eduverse-anchor/tests/: eduverse.ts  pda.ts
eduverse-frontend/: Cargo.toml  Dockerfile  README.md  index.html  index.scss  nginx.conf  test.sh
eduverse-frontend/assets/: web3.js
eduverse-frontend/assets/datepicker/: date-picker-dark.css
eduverse-frontend/js/: date-picker.js  phantom.js
eduverse-frontend/kubernetes/: eduverse-ingress.yaml  eduverse-svc.yaml  eduverse.yaml
eduverse-frontend/src/: app.rs  main.rs  solana.rs  types.rs  util.rs
eduverse-frontend/src/app/: components.rs  contexts.rs  pages.rs  router.rs
eduverse-frontend/src/app/components/: date_picker.rs  navbar.rs
eduverse-frontend/src/app/contexts/: wallet_context.rs
eduverse-frontend/src/app/pages/: home.rs  teacher_card.rs  teacher_intro.rs  teacher_profile.rs  teacher_public_profile.rs  teacher_search.rs  teacher_signup.rs  test_all.rs
eduverse-frontend/src/solana/: contract_client.rs  rpc_client.rs
eduverse-frontend/src/types/: subject.rs  teacher.rs
eduverse-types/: Cargo.toml
eduverse-types/src/: enums.rs  lib.rs  structs.rs
eduverse-types/src/state/: config.rs  lesson.rs  profile_by_id.rs  review.rs  review_by_id.rs  student.rs  subject_config.rs  subject_teacher.rs  teacher.rs
live-server-test/: index.html  index.js
mock-anchor/: Cargo.toml
mock-anchor/src/: lib.rs
programs/eduverse/: Cargo.toml
programs/eduverse/src/: errors.rs  lib.rs
programs/eduverse/src/accounts/: lesson.rs  mod.rs  review.rs  teacher.rs
programs/eduverse/src/instructions/: create_lesson.rs  create_review.rs  create_review_teacher.rs  create_student.rs  create_teacher.rs  deposit.rs  initialize.rs  lesson_approve.rs  lesson_begin.rs  lesson_close.rs  lesson_create.rs  lesson_deposit.rs  lesson_end.rs  mod.rs  register_subject.rs  subject_register.rs  withdraw.rs
programs/eduverse/src/state/: config.rs  lesson.rs  mod.rs  profile_by_id.rs  review.rs  review_by_id.rs  student.rs  subject.rs  subject_config.rs  subject_teacher.rs  teacher.rs  teacher_subject.rs
programs/eduverse/src/utils/: enums.rs  mod.rs  structs.rs
tests/: eduverse.ts  instruction.ts  pda.ts
(+12 files in other folders)
