[workspace]
members = ["programs/*", "eduverse-types"]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16"
eduverse-types = { path = "eduverse-types" }
