[package]
name = "eduverse-frontend"
version = "0.1.0"
edition = "2021"
description = "Frontend for the eduverse project"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["eduverse"]

[dependencies]
eduverse-contract = { path = "../eduverse-anchor/programs/eduverse-contract", default-features = false, features = [
    "wasm",
] }

# crates.io
anyhow = "1"
base64 = "0.21"
bincode = "1"
borsh = "0.10.3"
enum-iterator = "1"
getrandom = { version = "0.2", features = ["js"] }
gloo-net = "0.4"
gloo-utils = "0.2"
hex = "0.4"
js-sys = "0.3.54"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
solana-sdk = { version = "1.17" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = "0.3.54"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
